--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "lodash": "^4.17.15",
+    "vue": "^2.6.11",
+    "vuejs-paginate": "^2.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
@@ -18,6 +20,9 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^4.9",
+    "sass-loader": "^8.0.2",
+    "vue-router": "^3.2.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
